--- a/packages.config
+++ b/packages.config
@@ -3,4 +3,5 @@
   <package id="AForge" version="2.2.5" targetFramework="net40-client" />
   <package id="AForge.Video" version="2.2.5" targetFramework="net40-client" />
   <package id="AForge.Video.DirectShow" version="2.2.5" targetFramework="net40-client" />
+  <package id="Microsoft.UI.Xaml" version="2.5.0" targetFramework="net472" />
 </packages>
