--- a/CubeSolver.csproj
+++ b/CubeSolver.csproj
@@ -57,6 +57,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ConvertToVirtual.cs" />
     <Compile Include="DataStructure.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
